Broke the app into several components for scalablity and worked out spacing issues so that the card fits all the way down to an iPhone 5 and still looks decent when scaled up

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
+html {
+  min-width: 568; /* iphone 5 */
+  overflow: auto;
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 2vw;
 }
 
 code {
